Pin Django to 1.10 since django_superforms doesn't yet work with 1.11

--- a/requirements/base.in
+++ b/requirements/base.in
@@ -4,7 +4,7 @@
 # Verified bug on Python 3.5.1
 wheel
 
-django
+django<1.11  # django-superforms didn't yet support 1.11 or later
 django-extensions
 
 ipython
